# certilab-agentic-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
app/: config.py  graph.py  graph_langgraph.py  main.py  schemas.py
app/domain/: models.py
app/ingestion/: indexer.py  loader.py  mysql_loader.py  protocols.py  splitter.py
app/observability/: __init__.py  phoenix.py
app/retrieval/: constants.py  grader.py  protocols.py  qdrant_index.py  query.py  semantic.py  structured.py
app/security/: access_control.py  api_key_auth.py  demo_auth.py  payload_sanitizer.py
app/tools/: embeddings.py  mysql_connector.py  openai_client.py  s3_loader.py  web_search.py
data/mock/: certificates.json  customers.json  histories.json
data/pdf_text/: CERT-2025-001.txt  CERT-2025-002.txt  CERT-2025-003.txt
docs/: architecture.md  course-alignment.md  data-contract.md  observability.md  real-integration.md
notebooks/: README.md  certilab_agentic_rag_demo.ipynb
tests/: conftest.py  test_access_control.py  test_api.py  test_course_stack.py  test_course_submission_artifacts.py  test_observability.py  test_real_integration_config.py  test_retrieval.py  test_s3_loader.py
tests/integration/: test_mysql_integration.py  test_qdrant_integration.py
tests/unit/: test_api_key_auth.py  test_embeddings.py  test_graph.py  test_mysql_connector.py  test_mysql_loader.py  test_qdrant_index.py
ui/: chainlit_app.py
