[project]
name = "certilab-agentic-rag"
version = "0.1.0"
description = "Deterministic MVP scaffold for a Certilab-style agentic RAG service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.domain", "app.ingestion", "app.observability", "app.retrieval", "app.security", "app.tools", "ui"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
future-integrations = [
    "langgraph>=0.2.0",
    "openai>=1.40.0",
    "tavily-python>=0.5.0",
    "chainlit>=1.3.0",
    "qdrant-client>=1.10.0",
    "boto3>=1.34.0",
    "pymysql>=1.1.0",
]
local-embeddings = [
    "sentence-transformers>=2.7.0",
]
observability = [
    "arize-phoenix>=8.0.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "openinference-semantic-conventions>=0.1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
    "requires_qdrant: requires a running Qdrant instance (QDRANT_URL)",
    "requires_mysql: requires a reachable MySQL instance (DB_HOST)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
